--- a/main_todo.css
+++ b/main_todo.css
@@ -5,7 +5,7 @@
     height: 100vh;
     width: 30vw;
     align-content: center;
-    background-image: url(https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/todolistbg.png);
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/todolistbg.png');
     background-repeat: no-repeat;
     color: white;
     font-family: Roboto;
